Closed Bug 1344921 Opened 9 years ago Closed 9 years ago

In mingw, jumps that cross initializations are errors. Affects WindowsDllBlocklist.cpp

Categories

(Core :: Security, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox54 --- wontfix
firefox55 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

(Blocks 1 open bug)

Details

(Whiteboard: [tor])

Attachments

(1 file)

> /tmp/workspace/mingw-w64-build/firefox/mozglue/build/WindowsDllBlocklist.cpp:689:1: error: jump to label 'continue_loading' [-fpermissive] > continue_loading: > ^ > /tmp/workspace/mingw-w64-build/firefox/mozglue/build/WindowsDllBlocklist.cpp:577:12: note: from here > goto continue_loading; > ^ > /tmp/workspace/mingw-w64-build/firefox/mozglue/build/WindowsDllBlocklist.cpp:615:23: note: crosses initialization of 'const DllBlockInfo* info' > const DllBlockInfo* info = &sWindowsDllBlocklist[0]; > ^
Attachment #8850662 - Flags: review?(nfroyd)
Comment on attachment 8850662 [details] Bug 1344921 relocate initialization (and declaration) of variable to not allow a jump to bypass it https://reviewboard.mozilla.org/r/123216/#review127166
Attachment #8850662 - Flags: review?(nfroyd) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/8664b032a330 relocate initialization (and declaration) of variable to not allow a jump to bypass it r=froydnj
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: