Bug 1344921 relocate initialization (and declaration) of variable to not allow a jump to bypass it r=froydnj

MozReview-Commit-ID: LouiRkuCAqb